---------------------------------------------------------------------------------------------------
Version: 2.8.5
Date: ????
  Gui:
    - Make the project list slightly slimmer.
  Minor features:
    - Reverse-selecting with the Staged deconstruct stage, now deconstructs the entity in the NEXT stage. The "Deconstruct at next stage" setting now swaps normal and reverse select behavior.
---------------------------------------------------------------------------------------------------
Version: 2.8.4
Date: 2025-11-12
  Gui:
    - Don't close project list when entering a project.
  Minor features:
    - Hidden project surface names from remote view surface list.
  Bugfixes:
    - Fixed returning to a project/stage at the same position you left it, in more cases.
    - Fixed that planet selection in UIs would be off by 1 in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.8.3
Date: 2025-11-11
  Gui:
    - Moved "Delete project" button to the Project list UI.
    - Improved button layout in Project list UI
  Minor features:
    - Stay in remote view, when switching stages in remote view.
---------------------------------------------------------------------------------------------------
Version: 2.8.2
Date: 2025-11-10
  Bugfixes:
    - Fixed exporting projects to string, when settings remnants are present.
    - We really need to get rid of those...
---------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: 2025-11-09
  Bugfixes:
    - Fixed module dropping into a crafting machine (using Z).
    - Fixed tile ghosts lingering when pasting blueprints on space platforms.
    - Fixed duplication of item requests in fuel inventories, for exported blueprints.
    - Fixed that cryogenic plant mirroring was not saved.
  Minor Features:
    - Added a command to refresh the top left mod button, in case it disappears
  Gui: